<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="issue_report">Issue report</string>
    <string name="negative_button">Cancel</string>
    <string name="positive_button">OK</string>
    <string name="pref_ir">Use previous IR driver</string>
    <string name="pref_ir_sum">Enable this option if you are encountering issues with apps which require the IR LED, typically outdated ones. Once enabled check that the option \"Use alternate commands\" is disabled in IR apps</string>
    <string name="pref_ir_sum_on">Disable this option if you are encountering issues with apps which require the IR LED, typically most recent ones. Once enabled check that the option \"Use alternate commands\" is disabled in IR apps</string>
    <string name="reboot_title">Reboot required</string>
    <string name="alert_dialog_error">Error</string>
    <string name="alert_dialog_error_ledify">Could not find LEDify binary in the current ROM</string>
    <string name="alert_dialog_error_message">Could not apply changes. Did you allow superuser?</string>
    <string name="cat_common">Common</string>
    <string name="clicks">"Clicks: "</string>
    <string name="community_summary">Join our official community and keep in touch with us</string>
    <string name="current">"Current: "</string>
    <string name="doublepress_toexit">Double press to exit</string>
    <string name="doublepress_toexit_sum_off">A single press of the back key will close this app if the side drawer is closed</string>
    <string name="doublepress_toexit_sum_on">A double press of the back key will close this app if the side drawer is closed</string>
    <string name="first_load_message">"Toolbox is our new all-in-one device manager.
Currently there are some extra features which you can't find in other ROMs such as LEDify which lets you personalize notification LED's color pattern at device's boot and LibSwitcher (aka \"IR Driver\") to support any IR app.
An embedded OTA updates manager &amp; support for advanced kernel settings will come soon.

JDCTeam wishes you a pleasant experience!"</string>
    <string name="hardware_category">Hardware</string>
    <string name="irdriver_summary">"This is a manager for device's IR LED driver, smart way to make any IR app work.
You can switch between two IR drivers."</string>
    <string name="ledify_cat_preview">Preview</string>
    <string name="ledify_defconfig_success">Default configuration file created</string>
    <string name="ledify_defconfig_unsuccess">Could not create default configuration file</string>
    <string name="ledify_summary">"LEDify is a manager for notification LED's pattern at device's boot. You can choose between many patterns made by us."</string>
    <string name="megabytes">" MB"</string>
    <string name="megahertz">" MHz"</string>
    <string name="nav_cat_personalize">Personalize</string>
    <string name="nav_cat_system">System</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_bugreport">Issue report</string>
    <string name="nav_item_hardware">Hardware info</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_ledify">LEDify</string>
    <string name="nav_item_libswitcher">IR driver</string>
    <string name="nav_item_settings">Settings</string>
    <string name="pref_cpu_info">CPU frequency</string>
    <string name="pref_gpu_info">GPU frequency</string>
    <string name="pref_ledify_pattern">Pattern</string>
    <string name="pref_ledify_pattern_default">Color pattern which notification LED will run</string>
    <string name="pref_ledify_power">Power</string>
    <string name="pref_ledify_power_off">Notification LED at boot is disabled</string>
    <string name="pref_ledify_power_on">Notification LED at boot is enabled</string>
    <string name="pref_ledify_preview">Press here to preview current settings for 5 seconds</string>
    <string name="pref_ledify_reset_config">Press here to restore default settings</string>
    <string name="pref_ledify_speed">Speed</string>
    <string name="pref_ledify_speed_default">Color transition speed for the chosen pattern. Chosing \"Default\" will set default pattern-based speed</string>
    <string name="pref_ledify_speed_example">Color transition speed</string>
    <string name="pref_ledify_speed_example_sum">"Example:
sleep 0.10 for 100ms
sleep 0.50 for 500ms
sleep 1 for 1s"</string>
    <string name="pref_ledify_wide_default">Default settings</string>
    <string name="pref_ram_info">RAM memory</string>
    <string name="pref_ram_info_free">"Free: "</string>
    <string name="pref_ram_info_total">"Size: "</string>
    <string name="pref_ram_info_used">"Used: "</string>
    <string name="pref_realtime_cpu">Show realtime CPU frequency</string>
    <string name="pref_realtime_cpu_summary_off">Show per-core fixed CPU frequency in MHz</string>
    <string name="pref_realtime_cpu_summary_on">Show per-core load-based realtime CPU frequency in MHz. \"Offline\" means that the core is in standby</string>
    <string name="pref_realtime_gpu">Show realtime GPU frequency</string>
    <string name="pref_realtime_gpu_summary_off">Show fixed GPU maximum frequency in MHz</string>
    <string name="pref_realtime_gpu_summary_on">Show load-based realtime GPU frequency in MHz</string>
    <string name="pref_realtime_info_timing">Update frequency</string>
    <string name="pref_realtime_info_timing_summary">Refresh rate for realtime hardware infos</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summary">Change here the app theme</string>
    <string name="pref_username">Your name</string>
    <string name="pref_username_sum_default">Press here to insert your name</string>
    <string name="quick_start">"Swipe from left to right! "</string>
    <string name="reboot_message">"A reboot is required to apply changes.
Do you wish to reboot now?"</string>
    <string name="show_ad_sum_off">Show a little advertisement banner to support the developer</string>
    <string name="show_ad_sum_on">Thank you! ♡</string>
    <string name="show_ad_title">Show AD</string>
    <string name="support_us_cat">Support us</string>
    <string name="time">"Time: "</string>
    <string name="toolbox_version">App version</string>
    <string name="twice_to_exit">Press back again to exit</string>
    <string name="under_development">Feature under development</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeback">"Welcome back "</string>
    <string name="accept">Accept</string>
    <string name="app_license">"/* Copyright © JDCTeam - All Rights Reserved
 * Unauthorized rework, copy or redistribution is
 * strictly prohibited without express permission
 * of the respective owner.
 * Written by Mattia D'Alleva
 * &lt;antaresone@antaresone.eu>, October 2015
 */"</string>
    <string name="app_name">Toolbox</string>
    <string name="game_over">Game over!</string>
    <string name="ledify_title">LEDify</string>
    <string name="user_record">"Record: "</string>
</resources>