<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/antares_one" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_antares" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/time" android:layout_alignParentTop="true" android:layout_marginStart="8.0dip" android:layout_alignParentStart="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/clicks" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clicks" android:layout_below="@id/time" android:layout_alignStart="@id/time" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/record" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_record" android:layout_below="@id/clicks" android:layout_alignStart="@id/clicks" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="40.0sp" android:textStyle="bold" android:id="@id/game_over" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/game_over" android:layout_alignTop="@id/time" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
</RelativeLayout>